Simple Loging, obtaining object properties

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
 			"name": "BuildingEscape (Debug)",
 			"request": "launch",
 			"preLaunchTask": "BuildingEscape Win64 Debug Build",
-			"program": "C:\\Users\\Leon\\Documents\\Unreal Projects\\BuildingEscape\\Binaries\\Win64\\BuildingEscape-Win64-Debug.exe",
+			"program": "D:\\Projects\\BuidlingEscape_UE4\\Binaries\\Win64\\BuildingEscape-Win64-Debug.exe",
 			"args": [
 			],
 			"cwd": "D:\\Program Files (x86)\\Epic Games\\UE_4.22",
@@ -18,7 +18,7 @@
 			"name": "BuildingEscape (DebugGame)",
 			"request": "launch",
 			"preLaunchTask": "BuildingEscape Win64 DebugGame Build",
-			"program": "C:\\Users\\Leon\\Documents\\Unreal Projects\\BuildingEscape\\Binaries\\Win64\\BuildingEscape-Win64-DebugGame.exe",
+			"program": "D:\\Projects\\BuidlingEscape_UE4\\Binaries\\Win64\\BuildingEscape-Win64-DebugGame.exe",
 			"args": [
 			],
 			"cwd": "D:\\Program Files (x86)\\Epic Games\\UE_4.22",
@@ -31,7 +31,7 @@
 			"name": "BuildingEscape (Development)",
 			"request": "launch",
 			"preLaunchTask": "BuildingEscape Win64 Development Build",
-			"program": "C:\\Users\\Leon\\Documents\\Unreal Projects\\BuildingEscape\\Binaries\\Win64\\BuildingEscape.exe",
+			"program": "D:\\Projects\\BuidlingEscape_UE4\\Binaries\\Win64\\BuildingEscape.exe",
 			"args": [
 			],
 			"cwd": "D:\\Program Files (x86)\\Epic Games\\UE_4.22",
@@ -44,7 +44,7 @@
 			"name": "BuildingEscape (Shipping)",
 			"request": "launch",
 			"preLaunchTask": "BuildingEscape Win64 Shipping Build",
-			"program": "C:\\Users\\Leon\\Documents\\Unreal Projects\\BuildingEscape\\Binaries\\Win64\\BuildingEscape-Win64-Shipping.exe",
+			"program": "D:\\Projects\\BuidlingEscape_UE4\\Binaries\\Win64\\BuildingEscape-Win64-Shipping.exe",
 			"args": [
 			],
 			"cwd": "D:\\Program Files (x86)\\Epic Games\\UE_4.22",
@@ -57,7 +57,7 @@
 			"name": "BuildingEscape (Test)",
 			"request": "launch",
 			"preLaunchTask": "BuildingEscape Win64 Test Build",
-			"program": "C:\\Users\\Leon\\Documents\\Unreal Projects\\BuildingEscape\\Binaries\\Win64\\BuildingEscape-Win64-Test.exe",
+			"program": "D:\\Projects\\BuidlingEscape_UE4\\Binaries\\Win64\\BuildingEscape-Win64-Test.exe",
 			"args": [
 			],
 			"cwd": "D:\\Program Files (x86)\\Epic Games\\UE_4.22",
@@ -72,7 +72,7 @@
 			"preLaunchTask": "BuildingEscapeEditor Win64 Debug Build",
 			"program": "D:\\Program Files (x86)\\Epic Games\\UE_4.22\\Engine\\Binaries\\Win64\\UE4Editor-Win64-Debug.exe",
 			"args": [
-				"C:\\Users\\Leon\\Documents\\Unreal Projects\\BuildingEscape\\BuildingEscape.uproject"
+				"D:\\Projects\\BuidlingEscape_UE4\\BuildingEscape.uproject"
 			],
 			"cwd": "D:\\Program Files (x86)\\Epic Games\\UE_4.22",
 			"stopAtEntry": false,
@@ -86,7 +86,7 @@
 			"preLaunchTask": "BuildingEscapeEditor Win64 DebugGame Build",
 			"program": "D:\\Program Files (x86)\\Epic Games\\UE_4.22\\Engine\\Binaries\\Win64\\UE4Editor.exe",
 			"args": [
-				"C:\\Users\\Leon\\Documents\\Unreal Projects\\BuildingEscape\\BuildingEscape.uproject"
+				"D:\\Projects\\BuidlingEscape_UE4\\BuildingEscape.uproject"
 			],
 			"cwd": "D:\\Program Files (x86)\\Epic Games\\UE_4.22",
 			"stopAtEntry": false,
@@ -100,7 +100,7 @@
 			"preLaunchTask": "BuildingEscapeEditor Win64 Development Build",
 			"program": "D:\\Program Files (x86)\\Epic Games\\UE_4.22\\Engine\\Binaries\\Win64\\UE4Editor.exe",
 			"args": [
-				"C:\\Users\\Leon\\Documents\\Unreal Projects\\BuildingEscape\\BuildingEscape.uproject"
+				"D:\\Projects\\BuidlingEscape_UE4\\BuildingEscape.uproject"
 			],
 			"cwd": "D:\\Program Files (x86)\\Epic Games\\UE_4.22",
 			"stopAtEntry": false,
@@ -117,7 +117,7 @@
 			"args": [
 				"-projectfiles",
 				"-vscode",
-				"-project=\"C:\\Users\\Leon\\Documents\\Unreal Projects\\BuildingEscape\\BuildingEscape.uproject\"",
+				"-project=\"D:\\Projects\\BuidlingEscape_UE4\\BuildingEscape.uproject\"",
 				"-game",
 				"-engine"
 			],
