--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=1508E9764B2265B39393C786A8FC0F81
+CopyrightNotice=Copyright Leon Le 2020
 
 [StartupActions]
 bAddPacks=True
